--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.EjemplosLayout"
         tools:targetApi="31">
         <activity
+            android:name=".Ejercicio6"
+            android:exported="true" />
+        <activity
+            android:name=".Ejercicio5"
+            android:exported="false" />
+        <activity
             android:name=".Ejercicio4"
             android:exported="false" />
         <activity
