--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,8 +21,20 @@
         android:theme="@style/Theme.EjemplosLayout"
         tools:targetApi="31">
         <activity
-            android:name=".Ejercicio8_2"
+            android:name=".E9_Navegador"
             android:exported="false" />
+        <activity
+            android:name=".E9_telefono"
+            android:exported="false" />
+        <activity
+            android:name=".Ejercicio9_2"
+            android:exported="true" />
+        <activity
+            android:name=".Ejercicio9"
+            android:exported="true" />
+        <activity
+            android:name=".Ejercicio8_2"
+            android:exported="true" />
         <activity
             android:name=".Ejercicio8"
             android:exported="true" />
